delete file added and everything moved to filemanager module
